tests/type/bad/record_field_type.hel
foreign io_unit: IO<()>;

type Point = { x: f64, y: f64 };

p = Point{ x: 1, y: 2.0 };

main = io_unit;
